30/10/2009:	v4.1.39
	- updated translations (bnc #551046)

29/10/2009:	v4.1.38
	- extend interface so it works with gfxboot.c32

19/10/2009:	v4.1.37
	- fix progress indicator for PXE boot

19/10/2009:	v4.1.36
	- more examples

15/10/2009:	v4.1.35
	- improved gfxtest script
	- added some sample themes

14/10/2009:	v4.1.34
	- support pxe setup in test script
	- added patches for syslinux 3.83

12/10/2009:	v4.1.33
	- updated speech samples

12/10/2009:	v4.1.32
	- added swiss french keymap

7/10/2009:	v4.1.31
	- sync keyboard mapping list with yast (bnc #534856)

2/10/2009:	v4.1.30
	- fix pot file

30/9/2009:	v4.1.29
	- build new font
	- enhanced gfxboot-font
	- cleaned up po files
	- more flexible translation support 
	- livecd: add F4=kerneloptions

29/9/2009:	v4.1.28
	- set default install type correctly (bnc #542781)

28/9/2009:	v4.1.27
	- updated language list
	- fixed grub picture (bnc #542113)

24/9/2009:	v4.1.26
	- escape weird chars in URLs

18/9/2009:	v4.1.25
	- F-key assignments configurable via gfxboot.cfg

15/9/2009:	v4.1.24
	- added proxy setup (bnc #329668)

14/9/2009:	v4.1.23
	- fix some nasm warnings
	- updated 11.2 openSUSE theme (bnc #538949)
	- added network config dialog

9/9/2009:	v4.1.22
	- allow empty menus
	- added new gfxtest script
	- support qemu-kvm
	- improved gfxtest script; removed old test script
	- added --version option to gfxboot
	- no fb after F9 for live cd (bnc #526706)
	- gfxboot script works with new syslinux

8/4/2009:	v4.1.21
	- Ilyas Bakirov: added Kirghiz support

3/12/2008:	v4.1.20
	- implemented realloc function
	- file read works with files of unknown size (-1)
	- added basic 'restore' function (via F11)

3/12/2008:	v4.1.19
	- now really update speech samples

2/12/2008:	v4.1.18
	- enabled penguin theme for openSUSE

1/12/2008:	v4.1.17
	- new texts for speech support (bnc #391313)

20/11/2008:	v4.1.16
	- translations, again (bnc #445350)

20/11/2008:	v4.1.15
	- updated translations (bnc #445350)

20/11/2008:	v4.1.14