@@ -1,3 +1,6 @@
+16/11/2009:	v4.1.40
+	- syslinux patch: fix chdir() return value
+
 30/10/2009:	v4.1.39
 	- updated translations (bnc #551046)
 
